# embedded_cloud

./: Cargo.toml  Justfile  LICENSE  devbox.json  rustfmt.toml  toolchain.toml
crates/hub/: Cargo.toml
crates/message/: Cargo.toml
crates/message/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
