[workspace]
resolver = "2"
members = [
    "crates/transport",
    "crates/message",
    "crates/hub",
]

[workspace.dependencies]
tarpc = { version = "0.34.0", features = ["serde-transport-bincode", "tcp", "unix"] }
arbitrary = { version = "1.3.2" }
anyhow = { version = "1.0.86" }
tokio = { version = "1.39.2" }
tokio-macros = { version = "2.4.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
futures = { version = "0.3.30" }
opentelemetry = { version = "0.21.0" }
opentelemetry-jaeger = { version = "0.20.0" }
opentelemetry_sdk = { version = "0.21.2" }
tracing-opentelemetry = { version = "0.22.0" }

# Local
transport = { path = "./crates/transport"}
message = { path = "./crates/transport"}
