[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { workspace = true }
anyhow = { workspace = true }
tarpc = { workspace = true, features = ["serde-transport", "serde-transport-json", "tcp"] }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-macros = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true, features = ["rt-tokio"] }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
